bump jdk version to 21